# bus-booking-backend/src/routes/booking.routes.go
@@ -8,7 +8,10 @@ import (
 
 func BookingRoutes(router *gin.RouterGroup) {
 	bookingGroup := router.Group("/bookings")
-	{
-		bookingGroup.POST("", middlewares.AuthMiddleware(), controllers.CreateBookingController)
-	}
+  	bookingGroup.Use(middlewares.AuthMiddleware())
+  	{
+  		bookingGroup.POST("", controllers.CreateBookingController)
+  		bookingGroup.GET("/:bookingId", controllers.GetBookingDetailsController) 
+  		bookingGroup.GET("/my", controllers.GetMyBookingsController)         
+  	}
 }
